# checkMe

./: CMakeLists.txt
core/: addreceiptwindowcontroller.cpp  addreceiptwindowcontroller.h  main.cpp  mark.cpp  mark.h  receipt.cpp  receipt.h  receiptcontroller.cpp  receiptcontroller.h  receiptsdatacontroller.cpp  receiptsdatacontroller.h  totalcalculator.cpp  totalcalculator.h
ocr/: OCR.cpp  OCR.h  RequestSender.cpp  RequestSender.h  ResponseHandler.cpp  ResponseHandler.h
ui/: addcustomerwindow.cpp  addcustomerwindow.h  addcustomerwindow.ui  addreceiptwindow.cpp  addreceiptwindow.h  addreceiptwindow.ui  checkbox.cpp  checkbox.h  editcustomerswindow.cpp  editcustomerswindow.h  editcustomerswindow.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  receiptwindow.cpp  receiptwindow.h  receiptwindow.ui  subwidgettype.h
